# webp

./: .gitignore  LICENSE  README.md  circle.yml  stack-ghc8.yml  stack.yaml  webp.cabal
docs/: WebP-Decode.html  WebP-Encode.html  WebP-Types.html  WebP.html  doc-index.html  index-frames.html  index.html  mini_WebP-Decode.html  mini_WebP-Encode.html  mini_WebP-Types.html  mini_WebP.html  webp.haddock  webp.txt
docs/src/: WebP-Decode.html  WebP-Encode.html  WebP-FFI-Decode.html  WebP-FFI-Encode.html  WebP-Types.html  WebP.html
src/: WebP.hs
src/WebP/: Decode.hs  Encode.hs  Types.hs
src/WebP/FFI/: Decode.hsc  Encode.hsc
test/: WebPSpec.hs
