name:                webp
version:             0.1.0.0
synopsis:            Haskell bidings for libwebp
description:         Please see README.md
homepage:            https://github.com/pbogdan/webp#readme
license:             BSD3
license-file:        LICENSE
author:              Piotr Bogdan
maintainer:          ppbogdan@gmail.com
copyright:           2016 Piotr Bogdan
category:            Graphics, Image
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     WebP
  other-modules:       WebP.Encode
                     , WebP.FFI.Encode
  extra-libraries:     webp  
  build-depends:       base >= 4.7 && < 5
                     , bytestring
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite webp-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , webp
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/pbogdan/webp
