name:                webp
version:             0.1.0.0
synopsis:            Haskell bidings to libwebp
description:         Please see README.md
homepage:            https://github.com/pbogdan/webp#readme
license:             BSD3
license-file:        LICENSE
author:              Piotr Bogdan
maintainer:          ppbogdan@gmail.com
copyright:           2016 Piotr Bogdan
category:            Graphics, Image
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     WebP
                     , WebP.Types
  other-modules:       WebP.Decode
                     , WebP.Encode
                     , WebP.FFI.Decode
                     , WebP.FFI.Encode
  extra-libraries:     webp
  build-depends:       base >= 4.8 && < 5
                     , bytestring >= 0.10.0 && < 0.11
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite webp-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >= 4.8 && < 5
                     , bytestring >= 0.10.0 && < 0.11
                     , hspec >= 2.2.0 && < 2.3
                     , QuickCheck >= 2.8.0 && < 2.9
                     , quickcheck-instances >= 0.3.0 && < 0.4
                     , webp >= 0.1.0 && < 0.2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/pbogdan/webp
